[package]
name = "bleeding-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = [
    "rt-multi-thread",
    "rt",
    "parking_lot",
    "macros",
    "fs",
    "time",
    "process",
] }
anyhow = { version = "1.0" }

reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

sha1_smol = { version = "1.0", features = ["std"] }
regex = { version = "1.9" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[profile.release]
strip = true
lto = "thin"
